--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
     display: block;
     text-align: right;
 }
-.logo img {
+.img {
     width: 100%;
 }
 .logo .more-inf {
@@ -34,31 +34,15 @@ body {
 .task-wrapp{
     display: flex;
 }
-ul {
+.list {
     margin:0;
     padding: 0px;
 }
-li, h3 {
+.list-item{
     list-style:none;
 }
-input,button{
-    outline:none;
-}
-button {
-    background: none;
-    border: 0px;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
-}
-button:hover {
-    color: #3a3A3a;
-}
-/* Heading */
-h3,
-label[for='new-task'] {
+.title {
+    list-style:none;
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -67,7 +51,33 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.task{
+    outline:none;
+}
+.button,.edit,.delete{
+    outline:none;
+    background: none;
+    border: 0px;
+    color: #888;
+    font-size: 15px;
+    width: 60px;
+    font-family: Lato, sans-serif;
+    cursor: pointer;
+}
+.button:hover {
+    color: #3a3A3a;
+}
+/* Heading */
+.task[for='new-task'] {
+    color: #333;
+    font-weight: 700;
+    font-size: 15px;
+    border-bottom: 2px solid #333;
+    padding: 30px 0 10px;
+    margin: 0;
+    text-transform: uppercase;
+}
+.task[type="text"] {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,16 +89,16 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.task[type="text"]:focus {
     color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.task[for='new-task'] {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+.task#new-task {
     width: 318px;
 }
 
@@ -97,7 +107,6 @@ li {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
