refactor: adjust HTML-formatting according to rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@
 }
 
 @media (max-width:768px) {
-    .logo { text-align: center;
+
+    .logo { 
+        text-align: center;
     }
 }
 .center-elem{
